Fixed width and font on mobile devices

--- a/client/src/app/post/ui/comment/comment.component.scss
+++ b/client/src/app/post/ui/comment/comment.component.scss
@@ -51,13 +51,11 @@ $shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.5);
 @media screen and (max-width: 800px) {
   .comment {
     width: 70%;
-    font-size: 14px;
   }
 }
 
 @media screen and (max-width: 500px) {
   .comment {
-    width: 80%;
-    font-size: 12px;
+    width: 90%;
   }
 }
